<resources>
    <string name="app_name">Haircut</string>

    <!-- Change the domain... -->
    <string name="domain">https://www.lavanderialapegreen.it/includes/</string>

    <!-- Preferences...Changed with the package name of the app -->
    <string name="pref_file" translatable="false">com.example.mylibrary.PREFERENCE_FILE_KEY</string>
    <string name="pref_login_status" translatable="false">com.example.mylibrary.preference_login_status</string>
    <string name="pref_username" translatable="false">com.example.mylibrary.preference_username</string>
    <string name="pref_password" translatable="false">com.example.mylibrary.preference_password</string>
    <string name="pref_account" translatable="false">com.example.mylibrary.preference_account</string>
    <string name="pref_email" translatable="false">com.example.mylibrary.preference_email</string>
    <string name="pref_email_password" translatable="false">com.example.mylibrary.preference_email_password</string>
    <string name="pref_no_ask_client_settings" translatable="false">com.example.mylibrary.preference_client_settings</string>
    <string name="pref_token" translatable="false">com.example.mylibrary.preference_token</string>

    <!-- Exceptions -->
    <string name="exception_internet_connection">No internet connection</string>
    <string name="exception_password_length">Password length</string>
    <string name="exception_passwords_match">Passwords do not match</string>

    <!-- Accounts -->
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="super_admin">Super admin</string>
    <string name="company">Company</string>
    <string name="employee">Employee</string>
    <string name="customer">Customer</string>

    <!-- Account plan -->
    <string name="demo">Demo</string>
    <string name="monthly">Monthly</string>
    <string name="bimonthly">Bimonthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="semi_annual">Semi annual</string>
    <string name="annual">Annual</string>
    <string name="limited">Limited</string>
    <string name="unlimited">Unlimited</string>

    <!-- GeoLocation -->
    <string name="address">Address</string>
    <string name="street_number">Street number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip code</string>
    <string name="postal_code">Postal code</string>

    <!-- User -->
    <string name="phone">Phone</string>
    <string name="fiscal_code">Fiscal code</string>
    <string name="registration">Registration</string>
    <string name="subscription">Subscription</string>
    <string name="newsletters">Newsletters</string>
    <string name="account_type">Account type</string>
    <string name="account_plan">Account plan</string>
    <string name="session_status">Session status</string>
    <string name="referral_code">Referral code</string>
    <string name="verified">Verified</string>

    <!-- Person -->
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>

    <!-- Company -->
    <string name="name">Name</string>
    <string name="business_name">Business name</string>
    <string name="vat_number">Vat number</string>
    <string name="website">Website</string>

    <!-- Credentials-->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Actions -->
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="stay_connected">Stay connected</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="abort">Abort</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- Prompt -->
    <string name="choose_image">Choose image</string>
    <string name="not_account">Not account?</string>
    <string name="powered_by">Powered by Antonino Razeti</string>
    <string name="close">Close</string>
    <string name="open">Open</string>


    <!-- Messages -->
    <string name="logout_successful">Logout successful</string>
    <string name="logout_error">Logout error</string>
    <string name="login_failed">Login failed</string>
    <string name="profile_image">Profile image</string>
    <string name="progress_login">Login...</string>

</resources>