<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="5dp"
                    android:id="@+id/login_txt_username"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:drawableLeft="@drawable/closed_lock"
                    android:drawableStart="@drawable/closed_lock"
                    android:id="@+id/login_txt_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/login_rd_stay_connected"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/stay_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/not_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <TextView
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>